# Naloge-za-Programiranje-2

naloga0101/: CMakeLists.txt  naloga0101.cpp
naloga0102/: CMakeLists.txt  naloga0102.cpp
naloga0201/: CMakeLists.txt  Event.cpp  Event.h  main.cpp
naloga0301/: CMakeLists.txt  Date.cpp  Date.h  Location.h  main.cpp
naloga0302/: CMakeLists.txt  TextUtility.cpp  TextUtility.h  main.cpp
naloga0401/: CMakeLists.txt  Date.cpp  Date.h  Event.cpp  Event.h  EventOrganizer.cpp  EventOrganizer.h  Location.h  main.cpp
naloga0402/: CMakeLists.txt  Coordinates.h  Date.h  DateTime.cpp  Event.cpp  Event.h  EventOrganizer.cpp  EventOrganizer.h  main.cpp
naloga0501/: Concert.cpp  Coordinates.cpp  Event.cpp  EventOrganizer.cpp  EventOrganizer.h  Location.cpp  main.cpp
naloga0502/: Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  Date.cpp  Date.h  Person.cpp  Person.h  SavingsAccount.cpp  SavingsAccount.h  Transaction.cpp  Transaction.h  main.cpp
naloga0601/: AnonymusSoponsor.cpp  AnonymusSoponsor.h  CMakeLists.txt  Concert.cpp  Concert.h  Date.cpp  Event.cpp  Event.h  EventOrganizer.cpp  EventOrganizer.h  FinancialSponsor.cpp  FinancialSponsor.h  Location.h  Sponsor.cpp  Sponsor.h  SportsEvent.cpp  SportsEvent.h  Time.h  main.cpp
naloga0602/: CMakeLists.txt  ColorCode.h  Graph.cpp  (+6 more)
naloga1101/: CMakeLists.txt  DuplicatedSensorIdException.h  InvalidLocationException.cpp  InvalidLocationException.h  Sensor.cpp  Sensor.h  SensorHub.cpp  SensorHub.h  TemperatureSensor.cpp  TemperatureSensor.h  TemperatureSensorGPS.cpp  TemperatureSensorGPS.h  main.cpp  sensors.txt
(+46 files in other folders)
